syntagmas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syntagmas
  namespace: linguist-system-backend
  labels:
    app: syntagmas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syntagmas
  template:
    metadata:
      labels:
        app: syntagmas
    spec:
      containers:
        - name: syntagmas-container
          image: syntagmas
          resources:
            limits:
              memory: 500Mi
              cpu: 1
            requests:
              memory: 200Mi
              cpu: 1
          ports:
            - containerPort: 8078
      imagePullSecrets:
        - name: reg-sample
