syntagmas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syntagmas
  namespace: linguist-system-backend
  labels:
    app: syntagmas
spec:
  selector:
    app: syntagmas
  ports:
    - protocol: TCP
      port: 8078
      targetPort: 8078
